// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cards reducer should handle CLOSE_CARDS 1`] = `
Object {
  "allIds": Array [
    "card10",
    "card20",
  ],
  "byId": Object {
    "card10": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card10",
      "isGuessed": false,
      "isOpened": false,
    },
    "card20": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card20",
      "isGuessed": false,
      "isOpened": false,
    },
  },
}
`;

exports[`cards reducer should handle TRIGGER_CARD 1`] = `
Object {
  "allIds": Array [
    "card10",
    "card20",
  ],
  "byId": Object {
    "card10": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card10",
      "isGuessed": false,
      "isOpened": true,
    },
    "card20": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card20",
      "isGuessed": false,
      "isOpened": false,
    },
  },
}
`;

exports[`cards reducer should handle UPDATE_CARDS 1`] = `
Object {
  "allIds": Array [
    "card1",
    "card2",
  ],
  "byId": Object {
    "card1": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card1",
      "isGuessed": false,
      "isOpened": false,
    },
    "card2": Object {
      "backImageId": "backImage2",
      "frontImageId": "frontImage2",
      "id": "card2",
      "isGuessed": false,
      "isOpened": false,
    },
  },
}
`;

exports[`cards reducer should handle VALIDATE_CARDS when the not paired cards was opened 1`] = `
Object {
  "allIds": Array [
    "card10",
    "card20",
    "card30",
    "card40",
    "card50",
    "card60",
  ],
  "byId": Object {
    "card10": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card10",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card20",
    },
    "card20": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card20",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card10",
    },
    "card30": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage11",
      "id": "card30",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card40",
    },
    "card40": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage11",
      "id": "card40",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card30",
    },
    "card50": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage21",
      "id": "card50",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card60",
    },
    "card60": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage21",
      "id": "card60",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card50",
    },
  },
}
`;

exports[`cards reducer should handle VALIDATE_CARDS when the paired cards was opened 1`] = `
Object {
  "allIds": Array [
    "card10",
    "card20",
    "card30",
    "card40",
  ],
  "byId": Object {
    "card10": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card10",
      "isGuessed": true,
      "isOpened": true,
      "pairCardId": "card20",
    },
    "card20": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage1",
      "id": "card20",
      "isGuessed": true,
      "isOpened": true,
      "pairCardId": "card10",
    },
    "card30": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage11",
      "id": "card30",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card40",
    },
    "card40": Object {
      "backImageId": "backImage1",
      "frontImageId": "frontImage11",
      "id": "card40",
      "isGuessed": false,
      "isOpened": false,
      "pairCardId": "card30",
    },
  },
}
`;
